# inprot

./: CMakeLists.txt  charge_scale.h  cli.h  fasta_seq.h  fasta_utils.h  globals.h  group_koff.h  hydrophilicity_scale.h  hydrophobicity_scale.h  kmer_offset.h  kmers_manager.h  libsvm.h  main.cpp  md.h  pka_scale.h  ras.h  reduced_alphabets.h  svm.cpp  svm.h  svm_model.h  svm_scaling.h
cmake/Modules/: CheckCPUFeatures.cmake  CheckCompilerVersion.cmake  check_avx.cpp  check_avx2.cpp  check_avx512.cpp  check_sse.cpp  check_sse2.cpp  check_sse3.cpp  check_sse41.cpp  check_sse42.cpp
data/: model  scaling
